# borsh-construct-py

./: .flake8  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  setup.py  sitemap.xml
.github/workflows/: docs.yml  tests.yml
borsh/: __init__.py  deserializer.py  serializer.py  types.py
defining_new_types/: index.html
docs/: defining_new_types.md  index.md  types.md
search/: search_index.json
src/borsh/: __init__.py  core.py  enum.py
src/borsh_construct/: core.py  enum.py
tests/: conftest.py  test_borsh.py  test_core.py  test_hypothesis.py
types/: index.html
